Add routes and components

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Adopta Pet</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
- 
-  <h1>Adopta Pet</h1>
   Sitio en construcción
+
+  <div id="root"></div>
   <script type="module" src="main.js"></script>
 </body>
 </html>
